GNU mailutils NEWS -- history of user-visible changes. 2009-04-07
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 
2008, 2009 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.


Version 2.0.90 (Git)

* Ticket files

All MU client utilities make use of the user ticket file,
~/.mu-tickets, if it is present.

* API

* New mailbox formats

Three new append-only mailbox formats are introduced.  The URL syntax of
each of them is the same as that of the corresponding mailer.

** smtp

Send message using the `smtp' mailer.  It is equivalent to
`remote+smtp', introduced in previous version.

** sendmail.

Send message using the `sendmail' mailer.  It is equivalent to
`remote+sendmail', introduced in previous version.

** prog

Send message using the `prog' mailer.  It is equivalent to
`remote+prog', introduced in previous version.

* Deprecated mailbox formats.

The `remote+sendmail', `remote+prog' and `remote+smtp' mailbox formats
are deprecated in favor of `sendmail', `prog' and `smtp',
correspondingly.  

** Removed functions

- mu_sieve_get_ticket
- mu_sieve_set_ticket

** Changed functions

*** mu_message_save_to_mailbox: removed `ticket' argument.

New prototype is:

int mu_message_save_to_mailbox (mu_message_t msg,
                                mu_debug_t debug,
				const char *toname,
				int perms);

*** mu_attribute_to_string

This function now returns a string consisting of flag letters only, without
"Status:" prefix or final newline.


Version 2.0:

* New configuration file format.

See documentation, chapter 2.2, `Mailutils Configuration File', for a
detailed description.

* Programs

** Debugging and online help

Each Mailutils utility understands two additional command line
options:

 --debug-level=LEVEL    Set Mailutils debugging level.
 --debug-line-info      Show source info with debugging messages.

(see also `** Global debugging and verbosity settings.', below)
