@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2009-04-07
+GNU mailutils NEWS -- history of user-visible changes. 2009-04-14
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 
 2008, 2009 Free Software Foundation, Inc.
 See the end of file for copying conditions.
@@ -12,6 +12,11 @@ Version 2.0.90 (Git)
 
 All MU client utilities make use of the user ticket file,
 ~/.mu-tickets, if it is present.
+
+* Imap4d
+
+New configuration file entities allow to modify user's personal
+namespace and visible home directory.
 
 * API
 
